Housekeeping for releases: gitignore, install, README, CLAUDE.md
.gitignore: all 17 generated shims, dependency-reduced-pom.xml, cp.txt
(release-version.sh refuses to run with untracked files). Stray Zarr
metadata that a run wrote into the repo root was removed.

install: read the version from the pom instead of hard-coding
0.1.0-SNAPSHOT (breaks after every release bump); build the shim classpath
with -Dspark.scope=compile now that spark-core is provided by default; drop
the dead affine-fusion tail.

README: local installation is now 'download the local jar, java -jar';
building from source stays as the alternative; cluster/cloud sections point
at the cluster jar; stale Java 8 and command names fixed.

CLAUDE.md: fat jar / release notes, canonical remote.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>