@@ -268,19 +268,37 @@ Known issue: mvr-side `TestN5Zarr` multi-resolution sharding tests hit NPE at `P
 ```bash
 mvn clean compile                # compile only
 ./install -t 8 -m 64             # build + generate command shims
-mvn clean package -P fatjar      # cluster/cloud fatjar
+mvn -DskipTests clean package -Pfatjar        # target/BigStitcher-Spark-<v>-cluster.jar (Spark not bundled; spark-submit)
+mvn -DskipTests package -Pfatjar-local        # target/BigStitcher-Spark-<v>-local.jar   (Spark bundled; java -jar)
 ```
 
 Generated local scripts wrap `java -Xmx${MEM}g -Dspark.master=local[${THREADS}] -cp $JAR:$(deps) net.preibisch.bigstitcher.spark.<Class>`.
 
-Cluster/cloud: submit the fatjar via `spark-submit --class net.preibisch.bigstitcher.spark.<Class> ...`.
+Cluster/cloud: submit the cluster jar via `spark-submit --class net.preibisch.bigstitcher.spark.<Class> ...` (or without
+`--class`: the manifest's `Main-Class` is the `BigStitcherSpark` dispatcher, `spark-submit ... jar <command> ...`).
+
+### Fat jars & releases
+- One shade execution in `<build>`, gated by properties: `fatjar.skip` (default true), `fatjar.classifier`,
+  `spark.scope` (`provided` by default; the `fatjar-local` profile sets `compile`). The thin main artifact is
+  never replaced, so `release:perform` deploys are unaffected. Two `mvn` runs are needed for two jars.
+- Manifest (`ManifestResourceTransformer`): `Main-Class` = `BigStitcherSpark` (picocli dispatcher, 17 subcommands
+  = shim names), `Add-Opens` = the module flags from `install` (honoured only by `java -jar`), `Implementation-Version`.
+  `BigStitcherSpark.main` defaults `spark.master=local[*]` and sets the two `-D` props the shims pass.
+- Bundling Spark needs `Log4j2PluginCacheFileTransformer` (three jars ship `Log4j2Plugins.dat`) and excluding
+  `ch.qos.logback:*` (Bio-Formats pulls logback next to Spark's log4j binding). `log4j.version` pinned to Spark's 2.24.3.
+- Releases: scijava `release-version.sh` (clone at `~/workspace/scijava-scripts`) creates the tag
+  `BigStitcher-Spark-<v>`; needs `--skip-version-check` (we stay on pom-scijava 44 with mvr) and
+  `--skip-license-update` (pom says bsd, headers are GPL) and a tree without untracked files. On the tag,
+  `build.yml` deploys to maven.scijava.org and `release.yml` publishes the GitHub Release with
+  `BigStitcher-Spark-<v>-{cluster,local}.jar` plus constant-name copies (`releases/latest/download/...`).
+  `workflow_dispatch` on `release.yml` is a dry run (artifact only).
 
 ## Branches
 
 - **`zarrv3`** — current dev, matches mvr's `zarrv3`. Pinned to mvr 9.0.0-SNAPSHOT.
 - `main` — stable.
 - Many feature branches still alive (`TPS`, `intensity`, `blocksupplier`, `OpenDAL`, `keller`, `omezarr`, …) — most look merged-or-stale.
-- Remotes: `origin` = PreibischLab, `allen` = AllenNeuralDynamics fork.
+- Remotes: `origin` should point at **JaneliaSciComp/BigStitcher-Spark** (the canonical repo; `PreibischLab/BigStitcher-Spark` is a GitHub redirect), `allen` = AllenNeuralDynamics fork.
 
 ## House Rules
 
